# CppBaseCourse

./: .clang-format  .gitignore  CMakeLists.txt  README.md
HomeTasks/: CMakeLists.txt
HomeTasks/include/hw3d/: Triangles3D.hpp
HomeTasks/src/hw3d/: Triangles3D.cpp
caches/: CMakeLists.txt
caches/include/: Idealupd.h
caches/tests/: CMakeLists.txt  cache.md  cache_2q.cc  cache_ideal.cc  cache_lru.cc  gtest_2Q.cpp  gtest_Ideal.cpp  gtest_LRU.cpp  ideal_cache_upd.cc
caches/tests/data/: IdealTestingData.h  LRUTestingData.h  test1.txt  test3.txt
include/hw3d/: Primitives3D.hpp
src/: CMakeLists.txt
src/CppBaseCourse/hw3d/: Primitives3D.hpp  Triangles3D.hpp
src/CppBaseCourse/hwc/: 2Q.h  Ideal.h  LRU.h  cache.hpp
tests/: CMakeLists.txt
tests/data/hw3d/: test1.txt
tests/data/hwc/: 2QTestingData.h  CachesTestingCommon.h  IdealTestingData.h  LRUTestingData.h  test2.txt  test4.txt
tests/hw3d/: gtest_primitives.cpp  gtest_triangles.cpp  triangles.cc  trinagles.cc
tests/hwc/: cache.md  cache_2q  cache_2q.cc  cache_ideal  cache_ideal.cc  cache_lru  cache_lru.cc  gtest_2Q.cpp  gtest_Ideal.cpp  gtest_LRU.cpp  ideal_cache_upd.cc  test_2Q.cpp  test_LRU.cpp
tests/utils/: utils.h
triangles/: CMakeLists.txt  triangles.md
triangles/include/: Primitives3D.hpp  Triangles3D.hpp
triangles/src/: CMakeLists.txt  Triangles3D.cpp  Triangles3D.hpp
triangles/tests/: CMakeLists.txt  gtest_primitives.cpp  triangles.cpp  triangles_many.cpp
triangles/tests/data/: test1.txt  test2.txt  test21.txt  test22.txt  test3.txt  test4.txt  test5.txt  test6.txt  test_mult1.txt
